// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $94.34
      </span>
    </h1>
    <small
      className="page-header__sub-title"
    >
      <span />
       stored Expenses. Clear date filter to view.
    </small>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesSummary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        10
      </span>
       
      expenses
       totalling 
      <span>
        $5,240.90
      </span>
    </h1>
    <small
      className="page-header__sub-title"
    >
      <span />
       stored Expenses. Clear date filter to view.
    </small>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
